--- a/style/style.css
+++ b/style/style.css
@@ -82,3 +82,57 @@ footer {
     margin-bottom: 25px;
     text-align: center;
 }
+
+@media only screen and (max-width: 1400px) {
+    .section.first {
+        margin-top: 500px;
+    }
+}
+
+@media only screen and (max-width: 950px) {
+    .row.block {
+        display: block;
+    }
+    .row-column {
+        width: 100%;
+    }
+    .row-img {
+        width: 100%;
+    }
+
+    .day-item > .timeslot {
+        width: 175px;
+    }
+}
+
+@media only screen and (max-width: 750px) {
+    .embed {
+        max-width: 100%;
+    }
+    .address {
+        font-size: 20px;
+    }
+    .speakers {
+        margin: 0 -20px 0 -20px;
+    }
+    .speaker {
+        margin: 10px;
+    }
+    .day-item > .timeslot {
+        width: 100px;
+    }
+    .day-item > .timeslot .divider {
+        display: block;
+        content: "";
+        width: 50px;
+        height: 1px;
+        opacity: 0.75;
+        margin: 10px 0;
+    }
+    .map iframe {
+        width: 100%;
+    }
+    .sponsors {
+        margin: 0 -20px 0 -20px;
+    }
+}
