--- a/style/style.css
+++ b/style/style.css
@@ -36,9 +36,11 @@ header .background {
     -webkit-mask-image: linear-gradient(to top, rgba(255,255,255,0), rgba(255,255,255,1));
 }
 img {
+    max-width: 558px;
     border: 3px solid #af8e4d;
 }
 .image {
+    max-width: 558px;
     border: 3px solid #af8e4d;
 }
 
