--- a/style/style.css
+++ b/style/style.css
@@ -17,9 +17,27 @@ body {
     font-family: 'Boston';
     src: url('boston.ttf');
 }
+.iframe-container {
+    overflow: hidden;
+    padding-top: 56.25%;
+    position: relative;
+}
+.iframe-container iframe {
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+.embed {
+    width: 560px;
+    margin: 0 auto;
+}
 
 /*       Header       */
 header {
+    color: #d8d8d8;
     margin-bottom: 100px;
 }
 header .background {
@@ -35,20 +53,50 @@ header .background {
     background-size: cover;
     -webkit-mask-image: linear-gradient(to top, rgba(255,255,255,0), rgba(255,255,255,1));
 }
-img {
-    max-width: 558px;
-    border: 3px solid #af8e4d;
+header .logo {
+    margin-top: 50px;
+    text-align: center;
 }
-.image {
-    max-width: 558px;
-    border: 3px solid #af8e4d;
+header .logo img {
+    width: 90%;
+    max-width: 600px;
+}
+header .title {
+    margin-top: 120px;
+    margin-bottom: 50px;
+    font-size: 27px;
+    text-align: center;
+    color: #ffffff;
+}
+
+/*       Button       */
+.button {
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    display: block;
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 20px;
+    border: 3px solid #ffffff;
+    padding: 5px;
+    width: 200px;
+    transition: box-shadow 0.25s;
+}
+.button:hover,
+.button:focus {
+    color: #0E0E0E;
+    box-shadow: inset 210px 0 0 0 #ffffff;
 }
 
 /*       Content       */
 .section {
     margin-top: 100px;
 }
-
+.section.first {
+    margin-top: 200px;
+}
 .section > .title {
     color: #d8d8d8;
     font-family: 'Boston';
@@ -69,8 +117,155 @@ img {
     width: 90%;
     margin: 0 auto;
 }
+.bold {
+    font-weight: 900;
+}
 .center {
     text-align: center;
+}
+.center-margin {
+    text-align: center;
+    margin-top: 50px;
+}
+.row {
+    display: flex;
+}
+.row-column {
+    width: 50%;
+    padding: 20px;
+}
+.row-column.row-middle {
+    align-self: center;
+}
+.row-column > .title {
+    color: #d8d8d8;
+    font-family: 'Boston';
+    font-size: 28px;
+    text-align: center;
+    margin-top: 20px;
+}
+.row-column > .title:after {
+    display: block;
+    content: "";
+    width: 80px;
+    height: 2px;
+    background-color: #e5b962;
+    opacity: 0.75;
+    margin: 0 auto;
+}
+.row-img {
+    max-width:100%;
+    border:1px solid #af8e4d;
+}
+
+/*       Speakers       */
+.speakers {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 0 -30px 0 -30px;
+}
+.speaker {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    width: 160px;
+    margin: 30px 30px;
+}
+.speaker img {
+    width: 144px;
+    height: 144px;
+    border: 3px solid #af8e4d;
+    align-self: center;
+}
+.speaker .name {
+    font-weight: 900;
+    margin-top: 5px;
+}
+
+/*       Syllabus Item       */
+.day-title {
+    display: inline-block;
+    font-size: 24px;
+    padding-bottom: 5px;
+    border-bottom: 2px solid #af8e4d;
+    margin: 30px 0 30px 0;
+    font-weight: 700;
+}
+.day {
+    display: table;
+    width: 100%;
+}
+.day-item {
+    display: table-row;
+}
+.day-item > .timeslot {
+    display: table-cell;
+    width: 200px;
+    padding-top: 30px;
+}
+.day .day-item:first-child > .timeslot {
+    padding-top: 0px;
+}
+.day-item > .timeslot .divider {
+    display: inline-block;
+    content: "";
+    width: 5px;
+    height: 2px;
+    background-color: #d8d8d8;
+    opacity: 0.75;
+    margin: 5px 3px;
+}
+.day-item > .content {
+    display: table-cell;
+}
+.day-item > .content > .title {
+    font-weight: 900;
+}
+.day-item > .content > .by span {
+    color: #af8e4d;
+}
+.day-item > .content > .description {
+    margin-top: 10px;
+}
+
+/*      Social          */
+.cruise-img {
+    width: 200px;
+    border: 1px solid #af8e4d;
+    margin: 15px;
+}
+.hotel {
+    margin-top: 25px;
+}
+
+/*      Transport       */
+.map {
+    margin: 30px 0;
+    text-align: center;
+}
+.map iframe {
+    width: 560px;
+    height: 560px;
+}
+
+/*       Sponsors       */
+.sponsors {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 0 -35px 0 -35px;
+}
+.sponsor {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    margin: 35px;
+    justify-content: center;
+}
+.sponsor img {
+    max-width: 250px;
+    display: inline-flex;
 }
 
 /*       Contact       */
@@ -78,16 +273,23 @@ img {
     margin-top: 50px;
 }
 
+.divider {
+    border: 0;
+    border-top: 1px solid #e5b962;
+    opacity: 0.75;
+}
+
 /*       Footer       */
 footer {
     margin-top: 100px;
     margin-bottom: 25px;
     text-align: center;
+    font-size: 75%;
 }
 
 @media only screen and (max-width: 1400px) {
     .section.first {
-        margin-top: 500px;
+        margin-top: 100px;
     }
 }
 
