--- a/style/style.css
+++ b/style/style.css
@@ -294,6 +294,9 @@ footer {
 }
 
 @media only screen and (max-width: 950px) {
+    .title {
+        font-size: 50px;
+    }
     .row.block {
         display: block;
     }
@@ -310,6 +313,9 @@ footer {
 }
 
 @media only screen and (max-width: 750px) {
+    .title {
+        font-size: 40px;
+    }    
     .embed {
         max-width: 100%;
     }
